[tool.poetry]
name = "op-conductor-ops"
description = "CLI tool for managing op-conductor sequencer clusters"
authors = ["Zach Howard <zach@oplabs.co>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
requests = "^2.31.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
