[tool.poetry]
name = "op-conductor-ops"
version = "0.1.0"
description = "CLI tool for managing op-conductor sequencer clusters"
authors = ["Zach Howard <zach@oplabs.co>"]
license = "MIT"
readme = "README.md"
packages = [{include = "op_conductor_ops"}]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
requests = "^2.32.4"
toml = "^0.10.2"
rich = "^13.0.0"

[tool.poetry.scripts]
op-conductor-ops = "op_conductor_ops.cli:app"

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycache
  | _build
  | buck-out
  | build
  | dist
)/
'''
